moved data to bigquery and created a dbt staging model.

--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,17 @@
 .venv/
 **/*.csv
 .vscode/
-__pycache__/
+**/__pycache__
 **/*.json
 **/*.dockerignore
 ingestion/__pycache__
+cfb_pipeline/target
+cfb_pipeline/snapshots
+cfb_pipeline/logs
+cfb_pipeline/models/example
+cfb_pipeline/seeds
+**.env
+.user.yml
+compose.yaml
+**/Dockerfile
+**/logs
